Fix margin on mobile

--- a/assets/css/fullvideo.scss
+++ b/assets/css/fullvideo.scss
@@ -107,6 +107,7 @@
 #logo {
   opacity: 0;
   animation: fadeInDown 1s ease-in both;
+  padding: 2em;
 }
 
 @keyframes fadeInDown {
